--- a/css/sass/custom/_style.scss
+++ b/css/sass/custom/_style.scss
@@ -226,6 +226,15 @@ hr{
         }
     }
 
+    h3 {
+        font-family: 'Raleway';
+        font-weight: normal;
+        padding: 0.2em 0 0.2em;
+        letter-spacing: 0.05em;
+        font-size: 2.5em;
+        color: $color
+    }
+
     section{
         font-family: georgia,times,serif;
         line-height: 1.9em;
