--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,28 +11,28 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->		
-		<link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+		<link href="{{ site.baseurl }}/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
-<!-- 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png"> -->
-		<link rel="shortcut icon" href="ico/favicon.png">
+		<!-- 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/ico/apple-touch-icon-144-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="" href="{{ site.baseurl }}/ico/apple-touch-icon-114-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.baseurl }}/ico/apple-touch-icon-72-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/ico/apple-touch-icon-57-precomposed.png"> -->
+		<link rel="shortcut icon" href="{{ site.baseurl }}/ico/favicon.png">
 	</head>
 	<body class="container">
 		{{ content }}
-	<footer>
-		<div class="footer-content">
-			<span>Fait avec l'amour du <a href="http://compass-style.org">Compass</a> | Julien Bordellier</span>
-		</div>
-	</footer>
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	  ga('create', 'UA-38204169-3', 'julienbordellier.com');
-	  ga('send', 'pageview');
-	</script>
+		<footer>
+			<div class="footer-content">
+				<span>Fait avec l'amour du <a href="http://compass-style.org">Compass</a> | Julien Bordellier</span>
+			</div>
+		</footer>
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		  ga('create', 'UA-38204169-3', 'julienbordellier.com');
+		  ga('send', 'pageview');
+		</script>
 	</body>
 </html>
