--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,8 @@ layout: default
 ---
 <header class="post-header">
 	<div class="home">
-		<a href="/">
-			<i class="fa fa-home fa-3x fa-color"></i> 
+		<a href="{{ site.baseurl }}/">
+			<i class="fa fa-home fa-3x fa-color"></i>
 		</a>
 	</div>
 	<h1>{{page.title}}</h1>
@@ -34,7 +34,7 @@ layout: default
 	{% if page.previous %} 
 		<hr/>
 		<div class="left">
-			<a rel="prev" href="{{ page.previous.url }}">
+			<a rel="prev" href="{{ site.baseurl }}{{ page.previous.url }}">
 				<i class="fa fa-arrow-left fa-2x fa-color"></i>
 				<span>{{ page.previous.title }}</span>
 			</a>
@@ -42,7 +42,7 @@ layout: default
 	{% endif %}
 	{% if page.next %}
 		<div class="right">
-		<a rel="next" href="{{ page.next.url }}">
+		<a rel="next" href="{{ site.baseurl }}{{ page.next.url }}">
 			<span>{{ page.next.title }}</span>
 			<i class="fa fa-arrow-right fa-2x fa-color"></i>
 		</a>
