--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -10,11 +10,11 @@
 
 @import "base";
 
-@include font-face("Lobster Two Regular", font-files("/font/lobstertwo-regular-webfont.woff", "font/lobstertwo-regular-webfont.ttf", "font/lobstertwo-regular-webfont.svg"));
-@include font-face("Chunkfive Regular", font-files("/font/chunkfive-webfont.woff", "font/chunkfive-webfont.ttf", "font/chunkfive-webfont.svg"));
-@include font-face("QuickSand", font-files("/font/quicksand-regular-webfont.woff", "font/quicksand-regular-webfont.ttf", "font/quicksand-regular-webfont.svg"));
-@include font-face("QuickSandBold", font-files("/font/quicksand-bold-webfont.woff", "font/quicksand-bold-webfont.ttf", "font/quicksand-bold-webfont.svg"));
-@include font-face("Aller Regular", font-files("/font/aller_rg-webfont.woff", "/font/aller_rg-webfont.ttf", "/font/aller_rg-webfont.svg"));
+@include font-face("Lobster Two Regular", font-files("/blog/font/lobstertwo-regular-webfont.woff", "font/lobstertwo-regular-webfont.ttf", "font/lobstertwo-regular-webfont.svg"));
+@include font-face("Chunkfive Regular", font-files("/blog/font/chunkfive-webfont.woff", "font/chunkfive-webfont.ttf", "font/chunkfive-webfont.svg"));
+@include font-face("QuickSand", font-files("/blog/font/quicksand-regular-webfont.woff", "font/quicksand-regular-webfont.ttf", "font/quicksand-regular-webfont.svg"));
+@include font-face("QuickSandBold", font-files("/blog/font/quicksand-bold-webfont.woff", "font/quicksand-bold-webfont.ttf", "font/quicksand-bold-webfont.svg"));
+@include font-face("Aller Regular", font-files("/blog/font/aller_rg-webfont.woff", "/font/aller_rg-webfont.ttf", "/font/aller_rg-webfont.svg"));
  
 .container {
   background-color: $bgColor;
@@ -151,6 +151,9 @@ footer {
 
 .blogpost {
   margin: 0.2em 0.8em 0 0.8em;
+  font-family: "Quicksand";
+  margin-top: 0.8em;
+  text-align: justify;
 
   blockquote {
     font-family: "Quicksand Italic";
@@ -186,8 +189,16 @@ footer {
     }      
   }
 
+  li {
+	margin-bottom: 0.6em;
+  }
+
   ul {
-    list-style: disc outside none;
+    list-style: disc inside none;
+    margin-left: 1.0em;
+  }
+  ol {
+    list-style: decimal inside none;
     margin-left: 1.0em;
   }
 
